# crawler-core

./: .gitignore  README.md  pyproject.toml
src/crawler_core/: __init__.py  base.py  cli.py  http.py  models.py
src/crawler_core/sources/: __init__.py
src/crawler_core/sources/fatf_gafi/: __init__.py  _base.py  guidance.py  recommendations.py  reports.py  risk_based.py
src/crawler_core/sources/fi_se/: __init__.py  _base.py  decisions.py  news.py  remissvar.py  sanctions.py
