[project]
name = "crawler-core"
version = "0.1.0"
description = "Modular per-site crawler framework with a plug-and-play registry."
requires-python = ">=3.12"
dependencies = [
    "beautifulsoup4>=4.12",
    "curl-cffi>=0.15.0",
    "httpx>=0.27",
    "lxml>=5.0",
    "pydantic>=2.5",
    "rich>=13.0",
    "typer>=0.12",
]

[project.scripts]
crawler-core = "crawler_core.cli:app"

[dependency-groups]
dev = [
    "pytest>=8.0",
    "ruff>=0.5",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/crawler_core"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]
